<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:layout_margin="16dp"
        android:stretchColumns="0,1,2,3,4,5">

    <!-- Encabezado -->
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_700"
            android:paddingHorizontal="4dp"
            android:paddingVertical="2dp">

        <TextView
                android:text="@string/product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_span="4"
                android:id="@+id/textView2"
                android:textColor="@color/white"
                android:background="@color/teal_700" />

        <TextView
                android:text="@string/subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:id="@+id/textView3"
                android:textColor="@color/white"
                android:background="@color/teal_700" />
    </TableRow>

    <!-- 1er producto -->
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="4dp"
            android:paddingVertical="2dp">

        <TextView
                android:text="@string/product1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_span="4"
                android:id="@+id/textView4" />

        <TextView
                android:text="@string/price1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:id="@+id/textView5" />
    </TableRow>

    <!-- 2do producto -->
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="4dp"
            android:paddingVertical="2dp">

        <TextView
                android:text="@string/product2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_span="4"
                android:id="@+id/textView19" />

        <TextView
                android:text="@string/price2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:id="@+id/textView6" />
    </TableRow>

    <!-- 3er producto -->
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="4dp"
            android:paddingVertical="2dp">

        <TextView
                android:text="@string/product3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_span="4"
                android:id="@+id/textView7" />

        <TextView
                android:text="@string/price4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:id="@+id/textView8" />
    </TableRow>

    <!-- 4to producto -->
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="4dp"
            android:paddingVertical="2dp">

        <TextView
                android:text="@string/product4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_span="4"
                android:id="@+id/textView9" />

        <TextView
                android:text="@string/price4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:id="@+id/textView10" />
    </TableRow>

    <!-- Divisor -->
    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

    <!-- Subtotal -->
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="4dp"
            android:paddingVertical="2dp">

        <TextView
                android:text="@string/subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:textColor="@color/teal_700"
                android:id="@+id/textView11" />

        <TextView
                android:text="@string/subtotal_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:id="@+id/textView12" />
    </TableRow>

    <!-- Costo de envío -->
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="4dp"
            android:paddingVertical="2dp">

        <TextView
                android:text="@string/shipment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:textColor="@color/teal_700"
                android:id="@+id/textView13" />

        <TextView
                android:text="@string/shipment_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:id="@+id/textView14" />
    </TableRow>

    <!-- Cupón -->
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="4dp"
            android:paddingVertical="2dp">

        <TextView
                android:text="@string/coupon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:textColor="@color/teal_700"
                android:id="@+id/textView15" />

        <TextView
                android:text="@string/coupon_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:id="@+id/textView16" />
    </TableRow>

    <!-- Total -->
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="4dp"
            android:paddingVertical="2dp">

        <TextView
                android:text="@string/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:textColor="@color/teal_700"
                android:id="@+id/textView17" />

        <TextView
                android:text="@string/total_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:id="@+id/textView18" />
    </TableRow>
</TableLayout>